<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#200000FF"
        android:id="@+id/main_forecast"
        tools:context=".ForecastFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/monday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="209dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Rainy\n24C-31C" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/tuesday" />

            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Rainy\n24C-31C" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/wednesday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/sunny" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Sunny\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/thursday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/sunny" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Sunny\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/friday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Rainy\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/saturday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Rainy\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/sunday"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Sunny\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/saturday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Rainy\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/sunday"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Sunny\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/saturday"/>
            <ImageView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:src="@drawable/rainy" />
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="Rainy\n24C-31C" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/sunday"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:src="@drawable/sunny" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Sunny\n24C-31C" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>